objects/efaxapp__eFax_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>efaxapp__Auto_Send_Fax_Criteria_Code__c</fullName>
        <label>Auto Send Fax Criteria Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efaxapp__Auto_Send_Fax_Pattern__c</fullName>
        <label>Auto Send Fax Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Barcode_Posistion_Left__c</fullName>
        <inlineHelpText>Enter the number of pixels barcode should appear from the left of the page</inlineHelpText>
        <label>Barcode Posistion from Left</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Barcode_Posistion_Top__c</fullName>
        <inlineHelpText>Enter number of pixels barcode should appear from the top of the page</inlineHelpText>
        <label>Barcode Posistion from Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Barcode_Size_Width__c</fullName>
        <inlineHelpText>Enter the size in pixels for the barcode. This will be applied to the width.</inlineHelpText>
        <label>Barcode Size Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Document_ID__c</fullName>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Document_Path__c</fullName>
        <label>Document Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_Field_Label__c</fullName>
        <label>Fax Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_Field__c</fullName>
        <label>Fax Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_Number_Critera_Code__c</fullName>
        <label>Fax Number Critera Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_Number_Pattern__c</fullName>
        <label>Fax Number Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Is_Fax_Number_Within_Attachment_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fax Number Within Attachment Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>efaxapp__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Object_Prefix__c</fullName>
        <label>Object Prefix</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Org_Fax_Number__c</fullName>
        <label>Organization Fax Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>efaxapp__Received_Fax_Relationship_Field__c</fullName>
        <label>Received Fax Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Sent_Fax_Relationship_Field__c</fullName>
        <label>Sent Fax Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eFax Fields</label>
</CustomObject>